--- a/strand/iOS/Strand/Strand/DFInboxTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFInboxTableViewCell.xib
@@ -1,57 +1,42 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" rowHeight="355" id="lqR-Yk-QtK" customClass="DFInboxTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="355"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" rowHeight="123" id="lqR-Yk-QtK" customClass="DFInboxTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="123"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lqR-Yk-QtK" id="edi-gP-GBl">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Kln-so-NCf">
-                        <rect key="frame" x="0.0" y="51" width="320" height="304"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <rect key="frame" x="8" y="67" width="304" height="45"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="304" id="G94-zs-mtb"/>
+                            <constraint firstAttribute="height" constant="45" id="SYw-CP-P2h"/>
                         </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="8" minimumInteritemSpacing="8" id="F9p-PL-bzA">
-                            <size key="itemSize" width="148" height="148"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="F9p-PL-bzA">
+                            <size key="itemSize" width="49" height="49"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qA2-bH-hjM" customClass="DFProfilePhotoStackView" customModule="Strand" customModuleProvider="target">
-                        <rect key="frame" x="8" y="8" width="35" height="35"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="35" id="8HL-wh-dmZ"/>
-                            <constraint firstAttribute="height" constant="35" id="h54-yv-Mgh"/>
-                        </constraints>
-                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Actor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rlM-Qb-grC">
-                        <rect key="frame" x="51" y="8" width="35" height="17"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <rect key="frame" x="8" y="8" width="36" height="17"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="action text label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ejx-vN-IUf">
-                        <rect key="frame" x="89" y="8" width="151" height="17"/>
+                        <rect key="frame" x="47" y="8" width="241" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IEd-zt-0Vr">
-                        <rect key="frame" x="248" y="6" width="40" height="40"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="40" id="AR8-cB-w1k"/>
-                            <constraint firstAttribute="width" constant="40" id="kuf-qt-i9m"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="900" text="1d" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pik-Vg-OiT">
                         <rect key="frame" x="296" y="8" width="16" height="16"/>
                         <constraints>
@@ -61,32 +46,39 @@
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFu-j8-B9v">
-                        <rect key="frame" x="51" y="24" width="189" height="17"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFu-j8-B9v">
+                        <rect key="frame" x="8" y="24" width="280" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="People label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lsr-zM-wpW">
+                        <rect key="frame" x="8" y="40" width="80" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="pik-Vg-OiT" firstAttribute="leading" secondItem="IEd-zt-0Vr" secondAttribute="trailing" constant="8" id="1Lr-zR-LAF"/>
                     <constraint firstItem="pik-Vg-OiT" firstAttribute="top" secondItem="edi-gP-GBl" secondAttribute="top" constant="8" id="3VA-5E-M8W"/>
                     <constraint firstAttribute="trailing" secondItem="Ejx-vN-IUf" secondAttribute="trailing" priority="900" constant="8" id="4H8-ec-053"/>
                     <constraint firstItem="Ejx-vN-IUf" firstAttribute="leading" secondItem="rlM-Qb-grC" secondAttribute="trailing" constant="3" id="4fU-Nj-v1i"/>
                     <constraint firstItem="Ejx-vN-IUf" firstAttribute="trailing" secondItem="kFu-j8-B9v" secondAttribute="trailing" id="60a-KI-6MW"/>
-                    <constraint firstItem="IEd-zt-0Vr" firstAttribute="leading" secondItem="Ejx-vN-IUf" secondAttribute="trailing" constant="8" id="67k-cJ-Soj"/>
-                    <constraint firstItem="Kln-so-NCf" firstAttribute="top" secondItem="qA2-bH-hjM" secondAttribute="bottom" constant="8" id="6oc-R0-tZv"/>
-                    <constraint firstItem="qA2-bH-hjM" firstAttribute="centerY" secondItem="kFu-j8-B9v" secondAttribute="centerY" constant="-7" id="8eT-xQ-cui"/>
-                    <constraint firstItem="Kln-so-NCf" firstAttribute="leading" secondItem="edi-gP-GBl" secondAttribute="leading" id="IFp-8u-UCX"/>
-                    <constraint firstItem="rlM-Qb-grC" firstAttribute="leading" secondItem="qA2-bH-hjM" secondAttribute="trailing" constant="8" id="OCQ-XD-QZ5"/>
-                    <constraint firstItem="qA2-bH-hjM" firstAttribute="leading" secondItem="edi-gP-GBl" secondAttribute="leading" constant="8" id="P3w-N6-QZQ"/>
-                    <constraint firstItem="kFu-j8-B9v" firstAttribute="leading" secondItem="qA2-bH-hjM" secondAttribute="trailing" constant="8" id="PKM-oM-NEp"/>
-                    <constraint firstAttribute="trailing" secondItem="Kln-so-NCf" secondAttribute="trailing" id="abk-sf-CFr"/>
-                    <constraint firstItem="qA2-bH-hjM" firstAttribute="top" secondItem="edi-gP-GBl" secondAttribute="top" constant="8" id="e4G-WQ-9xp"/>
-                    <constraint firstItem="qA2-bH-hjM" firstAttribute="centerY" secondItem="rlM-Qb-grC" secondAttribute="centerY" constant="9" id="eZE-wl-yN4"/>
-                    <constraint firstItem="qA2-bH-hjM" firstAttribute="centerY" secondItem="IEd-zt-0Vr" secondAttribute="centerY" constant="-0.5" id="hYW-n7-hze"/>
+                    <constraint firstItem="kFu-j8-B9v" firstAttribute="top" secondItem="rlM-Qb-grC" secondAttribute="bottom" constant="-1" id="GrN-Dg-9AP"/>
+                    <constraint firstItem="pik-Vg-OiT" firstAttribute="leading" secondItem="Ejx-vN-IUf" secondAttribute="trailing" constant="8" id="IvP-aw-p73"/>
+                    <constraint firstItem="Kln-so-NCf" firstAttribute="leading" secondItem="kFu-j8-B9v" secondAttribute="leading" id="OHG-WH-xKY"/>
+                    <constraint firstItem="rlM-Qb-grC" firstAttribute="top" secondItem="Ejx-vN-IUf" secondAttribute="top" id="Rxk-cG-3pN"/>
+                    <constraint firstItem="Kln-so-NCf" firstAttribute="top" secondItem="lsr-zM-wpW" secondAttribute="bottom" constant="10" id="TTP-Yu-Gf9"/>
+                    <constraint firstItem="rlM-Qb-grC" firstAttribute="top" secondItem="edi-gP-GBl" secondAttribute="top" constant="8" id="Us9-bc-Pbq"/>
+                    <constraint firstItem="kFu-j8-B9v" firstAttribute="leading" secondItem="lsr-zM-wpW" secondAttribute="leading" id="Vf8-yX-C8Z"/>
+                    <constraint firstItem="kFu-j8-B9v" firstAttribute="top" secondItem="edi-gP-GBl" secondAttribute="top" priority="700" constant="10" id="a1A-uq-Uzt"/>
+                    <constraint firstAttribute="bottom" secondItem="Kln-so-NCf" secondAttribute="bottom" constant="10" id="lmf-Xv-hLD"/>
+                    <constraint firstItem="lsr-zM-wpW" firstAttribute="top" secondItem="kFu-j8-B9v" secondAttribute="bottom" constant="-1" id="lrZ-2z-4fc"/>
                     <constraint firstAttribute="trailing" secondItem="pik-Vg-OiT" secondAttribute="trailing" constant="8" id="ltW-wi-5jp"/>
+                    <constraint firstItem="kFu-j8-B9v" firstAttribute="leading" secondItem="edi-gP-GBl" secondAttribute="leading" constant="8" id="nOW-S7-rre"/>
                     <constraint firstItem="Ejx-vN-IUf" firstAttribute="bottom" secondItem="rlM-Qb-grC" secondAttribute="bottom" id="qcE-XX-mgo"/>
+                    <constraint firstItem="kFu-j8-B9v" firstAttribute="leading" secondItem="rlM-Qb-grC" secondAttribute="leading" id="waP-0c-uJM"/>
+                    <constraint firstItem="Kln-so-NCf" firstAttribute="trailing" secondItem="pik-Vg-OiT" secondAttribute="trailing" id="yWf-ss-ha4"/>
                 </constraints>
             </tableViewCellContentView>
             <inset key="separatorInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
@@ -95,12 +87,11 @@
                 <outlet property="actorLabel" destination="rlM-Qb-grC" id="gMi-e7-qZA"/>
                 <outlet property="collectionView" destination="Kln-so-NCf" id="Wpj-xa-riQ"/>
                 <outlet property="flowLayout" destination="F9p-PL-bzA" id="QBK-Ne-lOd"/>
-                <outlet property="previewImageView" destination="IEd-zt-0Vr" id="xDx-wF-OZZ"/>
-                <outlet property="profilePhotoStackView" destination="qA2-bH-hjM" id="A3d-AL-505"/>
-                <outlet property="subtitleLabel" destination="kFu-j8-B9v" id="m82-dR-CgV"/>
+                <outlet property="peopleLabel" destination="lsr-zM-wpW" id="pxy-PC-pJj"/>
                 <outlet property="timeLabel" destination="pik-Vg-OiT" id="9xi-el-Ul3"/>
+                <outlet property="titleLabel" destination="kFu-j8-B9v" id="wvw-Gd-qRp"/>
             </connections>
-            <point key="canvasLocation" x="-39" y="116.5"/>
+            <point key="canvasLocation" x="-249" y="10.5"/>
         </tableViewCell>
     </objects>
 </document>
